# shooter-game

./: CMakeLists.txt  README.md  build.sh
assets/spaceship/: ship_5_sheet.xcf  ship_6_sheet.xcf
includes/: bullet.hh  debug.hh  enemy.hh  explosion.hh  globals.hh  graphics.hh  input.hh  player.hh  sounds.hh  sprite.hh  text.hh
src/: bullet.cc  debug.cc  enemy.cc  explosion.cc  globals.cc  graphics.cc  input.cc  main.cc  player.cc  sounds.cc  sprite.cc  text.cc
